langtools/test/tools/javac/annotations/neg/Cycle3.out
Cycle3.java:17:9: compiler.err.cyclic.annotation.element
1 error
